# rust-raytracer

./: Cargo.toml  README.md
examples/: random_balls.rs
src/: camera.rs  colour.rs  lib.rs  main.rs  point3.rs  random_world.rs  ray.rs  render.rs  vec3.rs
src/hittable/: bounding_box.rs  bvh_node.rs  hit_record.rs  hittable.rs  interval.rs  mod.rs
src/hittable/hittables/: disk.rs  mod.rs  not_hittable.rs  plane.rs  sphere.rs
src/image_encoder/: image_crate.rs  image_encoder.rs  mod.rs
src/material/: material.rs  material_record.rs  mod.rs
src/material/materials/: checkerboard.rs  dialectric.rs  lambertian.rs  metal.rs  mod.rs
