[package]
name = "raytracing-in-a-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
indicatif = "0.17.5"
itertools = "0.11.0"
num = "0.4.1"
num-traits = "0.2.16"
rand = "0.8.5"
threadpool = "1.8.1"

[profile.release]
codegen-units = 1
lto = true
